bugs squashed

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #snowfall {
-    height: 500px;
-    width: 500px;
-    background: cornflowerblue;
+    /*height: 500px;
+    width: 500px;*/
+    background: black;
 }
